[gd_scene load_steps=4 format=3 uid="uid://dl5b1nrmjmryn"]

[ext_resource type="Script" uid="uid://b10bygp37n6qe" path="res://ui/combat_panel/stats_panel/stats_panel.gd" id="1_7sbp3"]
[ext_resource type="PackedScene" uid="uid://j17i2dfs4bgi" path="res://ui/progress_bar/numeric_progress_bar.tscn" id="1_mlmsi"]
[ext_resource type="Script" uid="uid://bx56odjterwf1" path="res://ui/combat_panel/stats_panel/hp_progress_bar.gd" id="3_hp55l"]

[node name="StatsPanel" type="PanelContainer"]
offset_right = 103.0
offset_bottom = 72.0
script = ExtResource("1_7sbp3")

[node name="VBoxContainer2" type="VBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 0

[node name="HPHBox" type="HBoxContainer" parent="VBoxContainer2"]
layout_mode = 2

[node name="HPNameLabel" type="Label" parent="VBoxContainer2/HPHBox"]
layout_mode = 2
theme_type_variation = &"YellowLabel"
text = "HP:"

[node name="HPLabel" type="Label" parent="VBoxContainer2/HPHBox"]
unique_name_in_owner = true
layout_mode = 2
theme_type_variation = &"BlueLabel"
text = "25"

[node name="HPProgressBar" parent="VBoxContainer2/HPHBox" instance=ExtResource("1_mlmsi")]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
script = ExtResource("3_hp55l")
mode = 0

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer2"]
custom_minimum_size = Vector2(95, 0)
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 0

[node name="DamageHBox" type="HBoxContainer" parent="VBoxContainer2/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer2/VBoxContainer/DamageHBox"]
layout_mode = 2
theme_type_variation = &"YellowLabel"
text = "Damage:"

[node name="DamageLabel" type="Label" parent="VBoxContainer2/VBoxContainer/DamageHBox"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 10
theme_type_variation = &"BlueLabel"
text = "25"

[node name="AttackHBox" type="HBoxContainer" parent="VBoxContainer2/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/separation = 0

[node name="Label" type="Label" parent="VBoxContainer2/VBoxContainer/AttackHBox"]
layout_mode = 2
size_flags_horizontal = 3
theme_type_variation = &"YellowLabel"
text = "Attack:"

[node name="AttackInitialLabel" type="Label" parent="VBoxContainer2/VBoxContainer/AttackHBox"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 8
theme_type_variation = &"BlueLabel"
text = "25"

[node name="AttackSlash" type="Label" parent="VBoxContainer2/VBoxContainer/AttackHBox"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 8
theme_type_variation = &"YellowLabel"
text = "/"

[node name="AttackSustainedLabel" type="Label" parent="VBoxContainer2/VBoxContainer/AttackHBox"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 8
theme_type_variation = &"BlueLabel"
text = "25"

[node name="DefenseHBox" type="HBoxContainer" parent="VBoxContainer2/VBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer2/VBoxContainer/DefenseHBox"]
layout_mode = 2
theme_type_variation = &"YellowLabel"
text = "Defense:"

[node name="DefenseLabel" type="Label" parent="VBoxContainer2/VBoxContainer/DefenseHBox"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 10
theme_type_variation = &"BlueLabel"
text = "25"

[node name="HitHBox" type="HBoxContainer" parent="VBoxContainer2/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer2/VBoxContainer/HitHBox"]
layout_mode = 2
theme_type_variation = &"YellowLabel"
text = "Hit:"

[node name="HitLabel" type="Label" parent="VBoxContainer2/VBoxContainer/HitHBox"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 10
theme_type_variation = &"BlueLabel"
text = "25"

[node name="CriticalRateHBox" type="HBoxContainer" parent="VBoxContainer2/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer2/VBoxContainer/CriticalRateHBox"]
layout_mode = 2
theme_type_variation = &"YellowLabel"
text = "Critical Rate:"

[node name="CriticalRateLabel" type="Label" parent="VBoxContainer2/VBoxContainer/CriticalRateHBox"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 10
theme_type_variation = &"BlueLabel"
text = "25"

[node name="AttackSpeedHBox" type="HBoxContainer" parent="VBoxContainer2/VBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer2/VBoxContainer/AttackSpeedHBox"]
layout_mode = 2
theme_type_variation = &"YellowLabel"
text = "Attack Speed:"

[node name="AttackSpeedLabel" type="Label" parent="VBoxContainer2/VBoxContainer/AttackSpeedHBox"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 10
theme_type_variation = &"BlueLabel"
text = "25"
